# Weisfeiler-Leman

./: .gitignore  CMakeLists.txt  Config.cmake.in  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_sdist.yml  build_wheels.yml
dependencies/: CMakeLists.txt
include/wl/: wl.hpp
include/wl/details/: canonical_color_refinement.hpp  edge_colored_graph.hpp  graph.hpp  printer.hpp  utils.hpp  weisfeiler_leman.hpp  weisfeiler_leman_1d.hpp  weisfeiler_leman_2d.hpp
python/src/: CMakeLists.txt  main.cpp
python/src/pykwl/: __init__.py  __init__.pyi  bindings.cpp
src/: CMakeLists.txt  canonical_color_refinement.cpp  edge_colored_graph.cpp  graph.cpp  weisfeiler_leman.cpp  weisfeiler_leman_1d.cpp  weisfeiler_leman_2d.cpp
tests/unit/: CMakeLists.txt  canonical_color_refinement.cpp
